@@ -1,5 +1,9 @@
 Revision history for DBIx::Class
 
+    * Notable Changes and Deprecations
+        - DBIC::FilterColumn now properly bypasses \'' and \[] literals, just
+          like the rest of DBIC
+
     * Fixes
         - Fix on_connect_* not always firing in some cases - a race condition
           existed between storage accessor setters and the determine_driver
